--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angularfire2": "^5.1.2",
     "core-js": "^2.5.4",
     "firebase": "^5.10.0",
+    "material-design-lite": "^1.3.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
