--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.10.0",
     "material-design-lite": "^1.3.0",
+    "print-js": "^1.0.61",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
