--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "angularfire2": "^5.1.2",
+    "angularx-social-login": "^2.2.1",
     "core-js": "^2.5.4",
     "firebase": "^5.10.0",
     "material-design-lite": "^1.3.0",
